--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.5.0
+  latlong2: ^0.9.0
+  js: ^0.6.7
+  web: ^0.5.0
+  image_picker: ^1.0.4
+  path_provider: ^2.1.1
+  path: ^1.9.0
+  image: ^4.1.3
+  http: ^0.13.0
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  geocoding: ^2.1.1
+  flutter_svg: ^2.0.7
+  # Only for web
+  universal_html: ^2.2.4
+  # Optional for state management if needed
+  provider: ^6.1.1
+  flutter_dotenv: ^5.1.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +56,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
