--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^2.5.0
   latlong2: ^0.9.0
   js: ^0.6.7
   web: ^0.5.0
@@ -38,15 +37,19 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.9.0
   image: ^4.1.3
-  http: ^0.13.0
-  google_maps_webservice: ^0.0.20-nullsafety.5
+  http: ^0.13.6
+  #google_maps_webservice: ^0.0.20-nullsafety.5
   geocoding: ^2.1.1
   flutter_svg: ^2.0.7
+  shared_preferences: ^2.2.2
+
   # Only for web
   universal_html: ^2.2.4
   # Optional for state management if needed
   provider: ^6.1.1
   flutter_dotenv: ^5.1.0
+  google_maps_flutter: ^2.5.0
+  google_maps_flutter_web: ^0.5.4+2 # or latest
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,8 +70,12 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+analyzer:
+  language:
+    enableSuperMixins: true
+ 
 # The following section is specific to Flutter packages.
+
 flutter:
 
   # The following line ensures that the Material Icons font is
