--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   geocoding: ^2.1.1
   flutter_svg: ^2.0.7
   shared_preferences: ^2.2.2
-
+  uuid: ^4.2.2
   # Only for web
   universal_html: ^2.2.4
   # Optional for state management if needed
