--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geocoding: ^2.1.1
   flutter_svg: ^2.0.7
   shared_preferences: ^2.2.2
+  url_launcher: ^6.2.1
 
   # Only for web
   universal_html: ^2.2.4
@@ -89,6 +90,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/.env
+    - assets/icons/
+    - assets/profiles/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
