--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_maps_flutter_web: ^0.5.4+2
   cupertino_icons: ^1.0.8
+  flutter_google_street_view: ^3.1.4
 
 dev_dependencies:
   flutter_test:
