--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,16 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_google_street_view: ^3.1.4
   screenshot: ^3.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
